# SimplePaint

./: .gitignore  CMakeLists.txt
src/: AbstractFigure.cpp  AbstractFigure.hpp  Circle.cpp  Circle.hpp  CompositeFigure.cpp  CompositeFigure.hpp  Editor.cpp  Editor.hpp  Figure.cpp  Figure.hpp  FigureManager.cpp  FigureManager.hpp  Hexagon.cpp  Hexagon.hpp  Pentagon.cpp  Pentagon.hpp  PolylineFigure.cpp  PolylineFigure.hpp  Rectangle.cpp  Rectangle.hpp  TextBox.cpp  TextBox.hpp  Trapezoid.cpp  Trapezoid.hpp  Triangle.cpp  Triangle.hpp  main.cpp
